Different URL, different script location

--- a/docker-veth-cleanup.service
+++ b/docker-veth-cleanup.service
@@ -5,8 +5,8 @@ Requires=docker.service
 
 [Service]
 TimeoutStartSec=0
-ExecStartPre=/usr/bin/curl -sSL http://bit.ly/1NzHBVm -o /tmp/cleanup.sh
-ExecStart=/bin/bash /tmp/cleanup.sh
+ExecStartPre=/usr/bin/curl -sSL http://bit.ly/1QdfOaT -o /tmp/docker-veth-cleanup.sh
+ExecStart=/bin/bash /tmp/docker-veth-cleanup.sh
 
 [Install]
 WantedBy=local.target
